--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,22 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box
 }
 
 body {
-  font-family: 'Nunito', Arial, sans-serif;
-  text-rendering: optimizeLegibility !important;
-  -webkit-font-smoothing: antialiased !important;
+    font-family: 'Nunito', Arial, sans-serif;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
 }
 
-input, button {
-  outline: 0;
+input,
+button {
+    outline: 0;
 }
 
 button {
-  cursor: pointer;
-  background: transparent;
-  border: none !important;
+    cursor: pointer;
+    background: transparent;
+    border: none !important;
 }
