--- a/src/style/Footer/styles.styl
+++ b/src/style/Footer/styles.styl
@@ -1,132 +1,131 @@
 .footer
-    background: #000000;
+    background #000000
 
     &__container
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 25px 0;
-        display: flex;
-        justify-content: space-between;
-
-        @media (max-width: 991px)
-            flex-direction: column;
-            padding: 25px 15px;
-
+        display flex
+        justify-content space-between
+        margin 0 auto
+        padding 25px 0
+        max-width 1200px
+        @media (max-width 1200px)
+            padding 25px 15px
+        @media (max-width 991px)
+            flex-direction column
     &__box
-        flex: 0 100%;
+        flex 0 100%
 
     &__contact
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 25px;
+        display flex
+        flex-direction column
+        justify-content center
+        align-items center
+        gap 25px
 
-        @media (max-width: 991px)
-            padding: 30px 0;
+        @media (max-width 991px)
+            padding 30px 0
 
     &__partners
-        display: flex;
-        justify-content: right;
-        align-items: center;
+        display flex
+        justify-content right
+        align-items center
 
-        @media (max-width: 991px)
-            justify-content: center;
+        @media (max-width 991px)
+            justify-content center
 
     &__title
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 27px;
-        color: #FFFFFF;
-        margin-bottom: 37px;
-        position: relative;
+        position relative
+        margin-bottom 37px
+        color #FFFFFF
+        font-weight 700
+        font-size 20px
+        line-height 27px
 
         &:after
-            content: '';
-            position: absolute;
-            bottom: -15px;
-            left: 0;
-            width: 45px;
-            height: 5px;
-            background: #fff;
+            position absolute
+            bottom -15px
+            left 0
+            width 45px
+            height 5px
+            background #fff
+            content ''
 
     &__text
-        display: block;
-        font-weight: 400;
-        font-size: 13px;
-        line-height: 12px;
-        color: #FFFFFF;
-        padding-bottom: 10px;
+        display block
+        padding-bottom 10px
+        color #FFFFFF
+        font-weight 400
+        font-size 13px
+        line-height 12px
 
     &__link
-        text-decoration: none;
-        transition: all 0.2s ease-in-out;
+        text-decoration none
+        transition all 0.2s ease-in-out
 
         &:hover
-            color: #f8475f;
+            color #f8475f
 
     &__button
-        width: 195px;
-        height: 38px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background: #fff;
-        border-radius: 5px;
-        gap: 15px;
-        text-decoration: none;
-        transition: all 0.2s ease-in-out;
+        display flex
+        justify-content center
+        align-items center
+        width 195px
+        height 38px
+        border-radius 5px
+        background #fff
+        text-decoration none
+        transition all 0.2s ease-in-out
+        gap 15px
 
         &:hover
-            background: #f8475f;
+            background #f8475f
 
             p
-                color: #fff;
+                color #fff
 
             svg
-                fill: #fff;
+                fill #fff
 
         svg
-            fill: #000;
-            transition: all 0.2s ease-in-out;
+            transition all 0.2s ease-in-out
+            fill #000
 
         p
-            max-width: 120px;
-            font-weight: 600;
-            font-size: 12px;
-            line-height: 100%;
-            color: #000000;
-            transition: all 0.2s ease-in-out;
+            max-width 120px
+            color #000000
+            font-weight 600
+            font-size 12px
+            line-height 100%
+            transition all 0.2s ease-in-out
 
     &__partner
-        font-weight: 400;
-        font-size: 10.6017px;
-        line-height: 14px;
-        color: #FFFFFF;
-        text-decoration: none;
+        color #FFFFFF
+        text-decoration none
+        font-weight 400
+        font-size 10.6017px
+        line-height 14px
 
         &:last-child
-            margin-left: 30px;
+            margin-left 30px
 
     &__developer
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-top: 1px solid #282828;
+        display flex
+        justify-content center
+        align-items center
+        border-top 1px solid #282828
 
         p
-            font-weight: 600;
-            font-size: 10px;
-            line-height: 100%;
-            color: #fff;
-            padding: 20px 0;
+            padding 20px 0
+            color #fff
+            font-weight 600
+            font-size 10px
+            line-height 100%
 
         a
-            font-weight: 600;
-            font-size: 11px;
-            line-height: 100%;
-            color: #fff;
-            transition: all 0.2s ease-in-out;
+            color #fff
+            font-weight 600
+            font-size 11px
+            line-height 100%
+            transition all 0.2s ease-in-out
 
             &:hover
-                color: #f8475f;
+                color #f8475f
