--- a/src/style/Header/styles.styl
+++ b/src/style/Header/styles.styl
@@ -1,130 +1,133 @@
 .header
-    position: sticky;
-    top: 0;
-    background: #fff;
-    z-index: 999;
-    box-shadow: 0px 5px 10px #0000000d;
+    position sticky
+    top 0
+    z-index 999
+    background #fff
+    box-shadow 0 5px 10px #0000000d
 
     &__container
-        max-width: 1200px;
-        margin: 0 auto;
-        height: 80px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        display flex
+        justify-content space-between
+        align-items center
+        margin 0 auto
+        max-width 1200px
+        height 80px
+        @media (max-width 1200px)
+            padding 0 20px
 
-        @media (max-width: 991px)
-            position: relative;
-            padding: 0 20px;
+        @media (max-width 991px)
+            position relative
+            height 60px
 
     &__menu
         svg
-            fill: #000;
+            fill #000
 
-        @media (min-width: 992px)
-            display: none;
+        @media (min-width 992px)
+            display none
 
     &__logo
-        @media (min-width: 992px)
-            margin-right: 130px;
+        @media (min-width 992px)
+            margin-right 120px
 
         svg
-            fill: #000;
+            fill #000
+            @media (max-width 991px)
+                max-width: 109px
 
     &__search
-        flex: 0 100%;
-        margin-right: 45px;
+        flex 0 100%
+        margin-right 45px
 
-        @media (max-width: 991px)
-            position: absolute;
-            top: 100%;
-            left: 0;
-            width: 100%;
-            background: #fff;
-            padding: 10px 0;
-            margin: 0;
+        @media (max-width 991px)
+            position absolute
+            top 100%
+            left 0
+            margin 0
+            padding 10px 0
+            width 100%
+            background #fff
 
         .search
-            position: relative;
+            position relative
 
-            @media (max-width: 991px)
-                width: 90%;
-                margin: 0 auto;
+            @media (max-width 991px)
+                margin 0 20px
 
             &__input
-                width: 100%;
-                border: none;
-                border-bottom: 1px solid #7a7a7a;
-                padding: 3px 0;
+                font-size 13px
+                padding 3px 0
+                width 100%
+                border none
+                border-bottom 1px solid #7a7a7a
 
             &__button
-                cursor: pointer;
-                position: absolute;
-                right: 0px;
+                position absolute
+                right 0
+                cursor pointer
 
                 &:hover
                     svg
-                        fill: #F8475F;
+                        fill #F8475F
 
                 svg
-                    fill: #000;
-                    transition: all 0.2s ease-in-out;
+                    transition all 0.2s ease-in-out
+                    fill #000
 
     &__account
-        margin-right: 10px;
+        margin-right 20px
 
-        @media (max-width: 991px)
-            display: none;
+        @media (max-width 991px)
+            display none
 
         .account
-            display: flex;
-            white-space: nowrap;
-            align-items: center;
-            gap: 5px;
-            text-decoration: none;
+            display flex
+            align-items center
+            text-decoration none
+            white-space nowrap
+            gap 5px
 
             &:hover
                 svg
-                    fill: #F8475F;
+                    fill #F8475F
 
                 span
-                    color: #F8475F;
+                    color #F8475F
 
             &__label
-                font-weight: 400;
-                font-size: 13px;
-                line-height: 18px;
-                color: #7A7A7A;
-                transition: all 0.2s ease-in-out;
+                color #7A7A7A
+                font-weight 400
+                font-size 13px
+                line-height 18px
+                transition all 0.2s ease-in-out
 
             svg
-                fill: #000;
-                transition: all 0.2s ease-in-out;
+                transition all 0.2s ease-in-out
+                fill #000
 
-    &__cart
-        margin-left: 10px;
+    &__minicart
 
-        .cart
-            display: flex;
-            align-items: center;
-            cursor: pointer;
+        .minicart
+            display flex
+            align-items center
+            cursor pointer
 
             &:hover
                 svg
-                    fill: #F8475F;
+                    fill #F8475F
 
             svg
-                fill: #000;
-                transition: all 0.2s ease-in-out;
+                transition all 0.2s ease-in-out
+                fill #000
 
             &__qnt
-                width: 14px;
-                height: 14px;
-                background: #F8475F;
-                font-weight: 700;
-                font-size: 10px;
-                line-height: 14px;
-                color: #FFFFFF;
-                border-radius: 50%;
-                text-align: center;
-                margin-left: 5px;
+                margin-left 5px
+                width 14px
+                height 14px
+                border-radius 50%
+                background #F8475F
+                color #FFFFFF
+                text-align center
+                font-weight 700
+                font-size 10px
+                line-height 14px
