--- a/src/style/Newsletter/styles.styl
+++ b/src/style/Newsletter/styles.styl
@@ -1,42 +1,88 @@
 
-#newsletter
-    background-color: #F2F2F2;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 25px 10px;
-    h2
-        font-weight: 700;
-        font-size: 22px;
-        color: #333
+.newsletter
+    display flex
+    flex-direction column
+    justify-content center
+    align-items center
+    padding 25px 10px 35px
+    background-color #F2F2F2
 
-    input
-        background-color: #fff;
-        font-size: 14px;
-        padding: 16px;
-        color: #585858;
-        border: 1px solid #fff;
-        border-radius: 5px;
-        width: 280px;
-        margin-right: 8px;
-    
-    .send-button
-        background-color: #000;
-        color: #fff;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 14px;
-        text-align: center;
-        border-radius: 5px;
-        padding: 8px 28px;
-        height: 48px;
-        transition: all .2s ease-in-out;
+    &__title
+        color #333
+        font-weight 700
+        font-size 22px
+        margin-bottom 15px
+
+    &__form
+        width 100%
+        @media (min-width 992px)
+            display flex
+            justify-content center
+
+    &__wrap
+        position relative
+
+    &__input
+        margin-right 8px
+        padding 0 16px
+        width 280px
+        height 48px
+        border 1px solid #fff
+        border-radius 5px
+        background-color #fff
+        color #585858
+        font-weight bold
+        font-size 12px
+
+    &__button
+        padding 8px 28px
+        height 48px
+        border-radius 5px
+        background-color #000
+        color #fff
+        text-align center
+        font-weight 700
+        font-size 14px
+        line-height 14px
+        transition all 0.2s ease-in-out
+
         &:hover
-            background: #f8475f;
+            background #f8475f
 
-    @media (max-width: 910px)
-        input,
-        button 
-            margin: 8px 0;
-            width: 100%;
+        &--restart
+            display block
+            margin 15px auto 0
+            width 328px
+
+    &__sucess
+        h4,
+        span
+            display block
+            text-align center
+
+        h4
+            font-weight 700
+            font-size 14px
+
+        span
+            font-size 12px
+
+    &__newemail
+
+    .alert
+        position absolute
+        bottom -20px
+        color #D7182A
+        font-size 12px
+        line-height 1
+
+    @media (max-width 991px)
+        &__title
+            margin-bottom 20px
+        &__button
+            width 100%
+        &__input
+            width 100%
+            margin-bottom 22px
+        .alert
+            bottom 5px
